[gd_scene load_steps=2 format=3 uid="uid://dpg4rx6jtwiec"]

[ext_resource type="Script" path="res://Scripts/Tela.gd" id="1_ipxtg"]

[node name="Tela" type="Node2D"]
script = ExtResource("1_ipxtg")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
